--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       timeout: 5s
       retries: 120
     env_file:
-    - local.env
+      - testing.env
     deploy:
       resources:
         limits:
@@ -62,7 +62,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.1.1
     container_name: es01
     env_file:
-      - local.env
+      - testing.env
     environment:
       - node.name=es01
       - xpack.security.enabled=true
@@ -94,7 +94,7 @@ services:
     image: fiitteam8/mongo_db
     container_name: mongo_db
     env_file:
-      - local.env
+      - testing.env
     volumes:
       - ./data/mongo_db:/data/db
     ports:
@@ -105,18 +105,13 @@ services:
           cpus: 1
           memory: 1g
 
-  mongo_express:
-    image: mongo-express
-    container_name: mongo_express
-    restart: always
-    ports:
-      - 8081:8081
+  scraper:
+    container_name: scraper
     env_file:
-      - local.env
-    deploy:
-      resources:
-        limits:
-          cpus: 1
-          memory: 1g
+      - testing.env
+    image: fiitteam8/news_scraper
+    ports:
+    - 6800:6800
+    mem_limit: 4294967296
 
   
