--- a/testing.env
+++ b/testing.env
@@ -2,6 +2,24 @@ SCRAPYD_USERNAME=test
 SCRAPYD_PASSWORD=test
 
 ELASTIC_PASSWORD=test
+# Password for the 'kibana_system' user (at least 6 characters)
+KIBANA_PASSWORD=test
+
+# Version of Elastic products
+STACK_VERSION=8.1.0
+
+# Set the cluster name
+CLUSTER_NAME=docker-cluster
+
+# Set to 'basic' or 'trial' to automatically start the 30-day trial
+LICENSE=basic
+#LICENSE=trial
+
+# Increase or decrease based on the available host memory (in bytes)
+MEM_LIMIT=6442450944
+
+# Project namespace (defaults to the current folder name if not set)
+#COMPOSE_PROJECT_NAME=myproject
 
 MONGO_INITDB_ROOT_USERNAME=test
 MONGO_INITDB_ROOT_PASSWORD=test
