--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,17 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v3
       - name: Build the docker-compose stack
-        run: docker-compose --env-file testing.env up 
+        run: docker-compose --env-file testing.env up -d
+        shell: bash
       
       - name: Sleep for 60 seconds
         uses: jakejarvis/wait-action@master
         with:
           time: '60s'
       
-      - uses: actions/checkout@v3
       - name: Executing integration tests
         run: |
           curl -u test:test localhost:6800/schedule.json -d spider=news_spider -d project=default -d search_from=2022-04-05 -d search_to=2022-04-05 -d locale=en-gb -d crimes_file='list_of_crimes_english.txt'
           python integration_test.py
+        shell: bash
