--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       contents: read
     steps:
       - name: Build the docker-compose stack
-        run: docker-compose --env-file testing.env up -d
+        run: docker-compose --env-file ./testing.env up -d
         shell: bash
       
       - name: Sleep for 60 seconds
