--- a/testing.env
+++ b/testing.env
@@ -33,5 +33,5 @@ ES_HOST=es01
 ES_PORT=9200
 ES_USER=elastic
 ES_PASSWORD=test
-ELASTIC_INDEX_NAME="articles_index"
-ELASTIC_INDEX_CONFIG="articles_index_config.json"
+ELASTIC_INDEX_NAME=articles_index
+ELASTIC_INDEX_CONFIG=articles_index_config.json
