--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Build the docker-compose stack
+      - uses: actions/checkout@v2
+      - name: Build the stack
         run: docker-compose --env-file testing.env up -d
-        shell: bash
       
       - name: Sleep for 60 seconds
         uses: jakejarvis/wait-action@master
