--- a/testing.env
+++ b/testing.env
@@ -29,6 +29,8 @@ MONGO_SERVER_PORT=27017
 MONGODB_DB=ams
 MONGO_USER=test
 MONGO_PASSWORD=test
+MONGO_URI_LOCAL=mongodb://mongodb0.example.com:27017
+
 ES_HOST=es01
 ES_PORT=9200
 ES_USER=elastic
