--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Build the stack
         run: docker-compose --env-file testing.env up -d
       
-      - name: Sleep for 60 seconds
+      - name: Sleep for 120s seconds
         uses: jakejarvis/wait-action@master
         with:
-          time: '60s'
+          time: '120s'
       
       - name: Install dependencies
         run: pip install -r requirements.txt
