mongo uri changed

--- a/testing.env
+++ b/testing.env
@@ -16,7 +16,7 @@ MONGO_SERVER_PORT=27017
 MONGODB_DB=ams
 MONGO_USER=test
 MONGO_PASSWORD=test
-MONGO_URI_LOCAL=mongodb://mongodb0.example.com:27017
+MONGO_URI_LOCAL=mongodb://test:test@mongo_db:27017/
 
 ES_HOST=es01
 ES_PORT=9200
