--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
           time: '10s'
         
       - name: Executing integration tests
-        run: docker run --env-file testing.env --network integration_testing_default fiitteam8/tester
+        run: docker run --entrypoint ping --network integration_testing_default fiitteam8/scraper -c 4 mongo_db
           
