--- a/testing.env
+++ b/testing.env
@@ -18,6 +18,10 @@ MONGO_USER=test
 MONGO_PASSWORD=test
 MONGO_URI_LOCAL=mongodb://test:test@localhost:27017/
 
+MONGODB_ARTICLES=articles
+MONGODB_CRIMEMAPS=crimemaps
+MONGODB_ERRORLINKS=errorlinks
+
 ES_HOST=es01
 ES_PORT=9200
 ES_USER=elastic
