--- a/testing.env
+++ b/testing.env
@@ -22,7 +22,7 @@ MONGODB_ARTICLES=articles
 MONGODB_CRIMEMAPS=crimemaps
 MONGODB_ERRORLINKS=errorlinks
 
-ES_HOST=es01
+ES_HOST=localhost
 ES_PORT=9200
 ES_USER=elastic
 ES_PASSWORD=test
