--- a/testing.env
+++ b/testing.env
@@ -17,6 +17,7 @@ MONGODB_DB=ams
 MONGO_USER=test
 MONGO_PASSWORD=test
 MONGO_URI_LOCAL=mongodb://test:test@localhost:27017/
+MONGODB_URI=mongodb://test:test@localhost:27017/
 
 MONGODB_ARTICLES=articles
 MONGODB_CRIMEMAPS=crimemaps
