--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    permissions: read-all
+    permissions: read-all|write-all
     steps:
       - uses: actions/checkout@v2
       - name: Build the stack
