--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
           time: '10s'
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          check=docker run --entrypoint ping --network integration_testing_default fiitteam8/scraper -c 4 mongo_db ; if [ "$check" = 0 ]; then echo "Host is up and rest of code here"; else echo "Host is down and nothing here"; fi
       
       - name: Scraping articles
         run: curl -u test:test localhost:6800/schedule.json -d spider=news_spider -d project=default -d search_from=2022-04-04 -d search_to=2022-04-05 -d locale=en-gb -d crimes_file=list_of_crimes_english.txt
