--- a/testing.env
+++ b/testing.env
@@ -2,6 +2,7 @@ SCRAPYD_USERNAME=test
 SCRAPYD_PASSWORD=test
 
 ELASTIC_PASSWORD=test
+ELASTIC_USER=elastic
 KIBANA_PASSWORD=testik
 STACK_VERSION=8.1.0
 CLUSTER_NAME=docker-cluster
@@ -29,3 +30,18 @@ ES_USER=elastic
 ES_PASSWORD=test
 ELASTIC_INDEX_NAME=articles_index
 ELASTIC_INDEX_CONFIG=articles_index_config.json
+
+MONGO_HOST=mongo_db
+MONGO_PORT=27017
+
+ME_CONFIG_MONGODB_ADMINUSERNAME=fiitkar
+ME_CONFIG_MONGODB_ADMINPASSWORD=fiitkar
+ME_CONFIG_SITE_BASEURL=/
+ME_CONFIG_MONGODB_URL=mongodb://fiitkar:fiitkar@mongo_db:27017/
+
+ELASTIC_HOST=es01
+ELASTIC_PORT=9200
+ELASTIC_COLLECTION="articles_index"
+
+INDEXER_NUMBER_OF_ARTICLES=100
+INDEXER_WAIT_SECONDS=60
