--- a/testing.env
+++ b/testing.env
@@ -24,7 +24,7 @@ MONGODB_ARTICLES=articles
 MONGODB_CRIMEMAPS=crimemaps
 MONGODB_ERRORLINKS=errorlinks
 
-ES_HOST=es01
+ES_HOST=localhost
 ES_PORT=9200
 ES_USER=elastic
 ES_PASSWORD=test
@@ -39,7 +39,7 @@ ME_CONFIG_MONGODB_ADMINPASSWORD=test
 ME_CONFIG_SITE_BASEURL=/
 ME_CONFIG_MONGODB_URL=mongodb://test:test@mongo_db:27017/
 
-ELASTIC_HOST=es01
+ELASTIC_HOST=localhost
 ELASTIC_PORT=9200
 ELASTIC_COLLECTION="articles_index"
 
