--- a/testing.env
+++ b/testing.env
@@ -12,7 +12,7 @@ MEM_LIMIT=6442450944
 MONGO_INITDB_ROOT_USERNAME=test
 MONGO_INITDB_ROOT_PASSWORD=test
 
-MONGO_SERVER_URL=mongo_db
+MONGO_SERVER_URL=localhost
 MONGO_SERVER_PORT=27017
 MONGODB_DB=ams
 MONGO_USER=test
@@ -31,13 +31,13 @@ ES_PASSWORD=test
 ELASTIC_INDEX_NAME=articles_index
 ELASTIC_INDEX_CONFIG=articles_index_config.json
 
-MONGO_HOST=mongo_db
+MONGO_HOST=localhost
 MONGO_PORT=27017
 
 ME_CONFIG_MONGODB_ADMINUSERNAME=test
 ME_CONFIG_MONGODB_ADMINPASSWORD=test
 ME_CONFIG_SITE_BASEURL=/
-ME_CONFIG_MONGODB_URL=mongodb://test:test@mongo_db:27017/
+ME_CONFIG_MONGODB_URL=mongodb://test:test@localhost:27017/
 
 ELASTIC_HOST=localhost
 ELASTIC_PORT=9200
