--- a/testing.env
+++ b/testing.env
@@ -12,7 +12,7 @@ MEM_LIMIT=6442450944
 MONGO_INITDB_ROOT_USERNAME=test
 MONGO_INITDB_ROOT_PASSWORD=test
 
-MONGO_SERVER_URL=localhost
+MONGO_SERVER_URL=mongo_db
 MONGO_SERVER_PORT=27017
 MONGODB_DB=ams
 MONGO_USER=test
@@ -24,22 +24,22 @@ MONGODB_ARTICLES=articles
 MONGODB_CRIMEMAPS=crimemaps
 MONGODB_ERRORLINKS=errorlinks
 
-ES_HOST=localhost
+ES_HOST=es01
 ES_PORT=9200
 ES_USER=elastic
 ES_PASSWORD=test
 ELASTIC_INDEX_NAME=articles_index
 ELASTIC_INDEX_CONFIG=articles_index_config.json
 
-MONGO_HOST=localhost
+MONGO_HOST=mongo_db
 MONGO_PORT=27017
 
 ME_CONFIG_MONGODB_ADMINUSERNAME=test
 ME_CONFIG_MONGODB_ADMINPASSWORD=test
 ME_CONFIG_SITE_BASEURL=/
-ME_CONFIG_MONGODB_URL=mongodb://test:test@localhost:27017/
+ME_CONFIG_MONGODB_URL=mongodb://test:test@mongo_db:27017/
 
-ELASTIC_HOST=localhost
+ELASTIC_HOST=es01
 ELASTIC_PORT=9200
 ELASTIC_COLLECTION="articles_index"
 
